EnvoyProxy/envoy.yml
admin:
  access_log_path: "/dev/null"
  address:
    socket_address:
      address: 0.0.0.0
      port_value: 8001
static_resources:
  listeners:
  - address:
      socket_address:
        address: 0.0.0.0
        port_value: 80
    filter_chains:
    - filters:
      - name: envoy.http_connection_manager
        config:
          codec_type: auto
          stat_prefix: ingress_http
          route_config:
            name: incloud_backend_route
            virtual_hosts:
            - name: incloud_backend
              domains:
              - "*"
              routes:
               - name: "identity"
                 match:
                   prefix: "/identity/"
                 route:
                  auto_host_rewrite: true
                  prefix_rewrite: "/"
                  cluster: identity

               - name: "volumes"
                 match:
                   prefix: "/volumes/"
                 route:
                   auto_host_rewrite: true
                   prefix_rewrite: "/"
                   cluster: volumes
              
               - name: "instances"
                 match:
                   prefix: "/instances"
                 route:
                   auto_host_rewrite: true
                   prefix_rewrite: "/"
                   cluster: instances
          http_filters:
          - name: envoy.router
          access_log:
          - name: envoy.file_access_log
            filter:
              not_health_check_filter: {}
            config:
              json_format:
                time: "%START_TIME%"
                protocol: "%PROTOCOL%"
                duration: "%DURATION%"
                request_method: "%REQ(:METHOD)%"
                request_host: "%REQ(HOST)%"
                path: "%REQ(X-ENVOY-ORIGINAL-PATH?:PATH)%"
                response_flags: "%RESPONSE_FLAGS%"
                route_name: "%ROUTE_NAME%"
                upstream_host: "%UPSTREAM_HOST%"
                upstream_cluster: "%UPSTREAM_CLUSTER%"
                upstream_local_address: "%UPSTREAM_LOCAL_ADDRESS%"
              path: "/tmp/access.log"
  clusters:
  - name: volumes
    connect_timeout: 0.25s
    type: strict_dns
    lb_policy: round_robin
    hosts:
    - socket_address:
        address: volumes-api
        port_value: 5001
  - name: instances
    connect_timeout: 0.25s
    type: strict_dns
    lb_policy: round_robin
    hosts:
    - socket_address:
        address: instances-api
        port_value: 5001
 
  - name: identity
    connect_timeout: 0.25s
    type: strict_dns
    lb_policy: round_robin
    hosts:
    - socket_address:
        address: identity-api
        port_value: 5001
